--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,18 +34,21 @@ body {
 ::-webkit-scrollbar-thumb {
   background: var(--light-green);
 }
+
 /* Reeuseble classes */
-.container {
+/* .container {
   margin: auto;
   width: 90%;
-}
+} */
 
 .icon {
   width: 50px;
 }
+
 .icon-sm {
   width: 30px;
 }
+
 .card-icon-sm {
   width: 42px;
   height: 42px;
@@ -56,6 +59,7 @@ body {
   justify-content: center;
   cursor: pointer;
 }
+
 .route-h {
   min-height: 90vh;
   padding: 40px 0px;
@@ -65,6 +69,7 @@ body {
   width: 100vw;
   font-size: 1.4rem;
 }
+
 .loaded-lg {
   width: 100vw;
   font-size: 2rem;
@@ -74,6 +79,7 @@ body {
 nav {
   background-color: var(--white);
 }
+
 nav .container {
   display: flex;
   justify-content: space-between;
@@ -83,20 +89,22 @@ nav .container {
 
 nav .container .links {
   display: flex;
-  gap: 30px;
+  gap: 15px;
 }
+
 nav .container .links a {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  background-color: var(--gray-1);
+  background-color: var(--gray-2);
   color: var(--green);
   border-radius: 5px;
   font-weight: 700;
   padding: 7px 15px;
   width: 170px;
 }
+
 nav .container .links a.active {
   background-image: linear-gradient(
     90deg,
@@ -105,6 +113,7 @@ nav .container .links a.active {
   );
   color: var(--white);
 }
+
 nav .container .links a.active img {
   filter: brightness(100);
 }
